# nuttertools

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: echo.rs  lib.rs  main.rs  phone_gen.rs  prosecho.rs  proxy_police.rs  rat.rs  russian_roulette.rs  sha1_crack.rs  socket_police.rs
src/blackjacked/: cards.rs  error.rs  game.rs  main.rs  mod.rs  util.rs
