[package]
name = "nuttertools"
description = "A collection of crazy CLI tools in Rust"
authors = ["mbrav <mbrav@protonmail.com>"]
version = "0.0.5"
edition = "2021"

[profile.dev]
opt-level = 1

# Build optimizations: https://github.com/johnthagen/min-sized-rust
[profile.release]
panic = "abort"
strip = true      # Strip symbols from binary
opt-level = "z"   # Optimize for size
lto = true        # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations (takes longer)

[[bin]]
name = "nuttertools"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sha1 = "0.10"
